# job_listings_automation

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
config/: searches.example.json
src/job_listings_automation/: __init__.py  __main__.py  browser_session.py  exporters.py  listing_extractor.py  logger_setup.py  main.py  models.py  pagination.py  protocols.py  scraper.py  selectors.py  settings.py  text_utils.py  url_utils.py
tests/: fakes.py  test_browser_session.py  test_exception_handling.py  test_exporters.py  test_listing_extractor.py  test_main.py  test_pagination.py  test_scraper.py  test_settings.py  test_text_utils.py  test_url_utils.py
