[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-listings-automation"
version = "0.1.0"
description = "Browser automation project for collecting and exporting job listing data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "playwright>=1.53.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[project.scripts]
job-listings-automation = "job_listings_automation.main:run_scraper"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
files = ["src"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
